<resources>
    <string name="app_name">聆听</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bottom_news">新闻</string>
    <string name="bottom_weather">天气</string>
    <string name="bottom_settings">设置</string>
    <string name="onLoading">更多正在加载中。。。</string>
    <string name="newsDetail">新闻详情</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="stop">停止</string>
    <string name="voicer">发音人</string>
    <string name="speed">语速</string>
    <string name="volume">音量</string>
    <string name="save">保存</string>
    <string name="SaveTips">Tips:参数只有在下次播放时才会生效哦</string>
    <string name="TtsSetting">语音合成设置</string>
    <string name="myinfo">我的信息</string>
    <string name="exit">退出登录</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
