<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/bottom_settings"
        app:titleTextColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/voicer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/voicer_spinner"
            android:entries="@array/voicer"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/speed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/speed_tv"
            android:textSize="20sp"
            android:text="50"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:progress="50"
        android:id="@+id/speedSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"/>
    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/volume"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/volume_tv"
            android:textSize="20sp"
            android:text="50"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:progress="50"
        android:id="@+id/volumeSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"/>
    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <Button
        android:id="@+id/save"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingTop="5dp"
        android:textSize="12sp"
        android:text="@string/SaveTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>