<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="50dp"
        android:src="@drawable/icon"/>
    <View
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>


    <TextView
        android:id="@+id/myInfo"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/myinfo" />
    <View
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>


    <TextView
        android:id="@+id/Ttsset"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/TtsSetting" />

    <View
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <Button
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/exit" />
</LinearLayout>